--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+nav,
+a {
+  font-family: "Lato", sans-serif;
+}
+p,
+button {
+  font-family: "Montserrat", sans-serif;
+}
+.my-container {
+  @apply max-w-7xl mx-auto px-5;
+}
+.my-btn {
+  @apply uppercase text-white font-semibold  bg-[#12aee0] rounded-3xl px-7 py-3 cursor-pointer;
+}
