--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ button {
   @apply max-w-7xl mx-auto px-5;
 }
 .my-btn {
-  @apply uppercase text-white font-semibold  bg-[#12aee0] rounded-3xl px-7 py-3 cursor-pointer duration-300 hover:bg-[#0aa0d1];
+  @apply uppercase text-white font-semibold  bg-[#12aee0] rounded-3xl px-7 py-3 cursor-pointer duration-300 hover:bg-[#0aa0d1] active:scale-110;
 }
 
 .tab-outline {
@@ -29,4 +29,7 @@ button {
 
 .my-input {
   @apply px-5 py-2 w-full rounded-3xl border focus:outline-[#12aee0];
+}
+.outline-btn {
+  @apply uppercase text-[#12aee0] border border-[#12aee0] font-semibold   rounded-3xl px-7 py-3 cursor-pointer duration-300 hover:bg-[#12aee0] hover:text-white  active:scale-110;
 }
